--- a/app/src/main/res/layout/item_adapter_layout.xml
+++ b/app/src/main/res/layout/item_adapter_layout.xml
@@ -2,6 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_margin="10dp">
@@ -10,7 +11,8 @@
         android:id="@+id/card_view"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        card_view:cardBackgroundColor="@color/colorPrimary"
+        app:cardUseCompatPadding="true"
+        card_view:cardElevation="5dp"
         card_view:cardCornerRadius="12dp">
 
         <RelativeLayout
@@ -62,9 +64,7 @@
                     android:layout_width="60dp"
                     android:layout_height="60dp"
                     android:layout_alignParentRight="true"
-                    android:padding="10dp"
-                    android:src="@android:drawable/ic_dialog_info"
-                    android:visibility="visible" />
+                    android:padding="10dp" />
             </RelativeLayout>
 
             <TextView
